syntax = "proto3";

package NUgc.NSchema.NGeosearch;

import "google/protobuf/timestamp.proto";

message TBusinessFilter {
    string QueryTextMD5 = 1;
    repeated string Filter = 2;
    google.protobuf.Timestamp LastUpdateTime = 3;
    google.protobuf.Timestamp LastUseTime = 4;
}
